deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SERVICENAME
  labels:
    app: SERVICENAME
spec:
  selector:
    matchLabels:
      app: SERVICENAME
  template:
    spec:
      containers:
      - name: SERVICENAME
        image: GITHUB-USER-OR-ORG/SERVICENAME:${TAG}
        ports:
          - containerPort: 8080
            name: "SERVICENAME-http"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
