deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICENAME
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: SERVICENAME-http
  selector:
    app: SERVICENAME
